Fixed search bar overflow

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -197,7 +197,7 @@ input:invalid + input[type="submit"].btn--solid-white {
     right: 0;
     margin-bottom: 0;
     width: 200px;
-    height: 46px;
+    height: 45px;
     background: $gray-5;
     border: none;
     border-radius: 0;
