--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 
-$hh: 138px; // Header height
+$hh: 140px; // Header height
 
 // Header
 #header {
